# tesseract_ocr_mingw

./: CMakeLists.txt  README.md  cmake.bat  cmake_noqt.bat  del_cmake_cache.bat  env.bat
